BusOne/src/objects/EM_Speaker_vod__c.object
<CustomObject>
    <description>Stores a list of people to be used as event speakers for Veeva Event Management.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account record corresponding to the speaker.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>EM_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <description>Address of the speaker.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Cap_vod__c</fullName>
        <description>Annual spending limit.</description>
        <label>Annual Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Remaining_Committed_vod__c</fullName>
        <description>Displays the speaker cap balance minus actuals and upcoming committed costs</description>
        <formula>Annual_Cap_vod__c - (Upcoming_Committed_Costs_vod__c+Year_to_Date_Spend_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Remaining Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Remaining_vod__c</fullName>
        <description>Amount remaining in a speaker&apos;s annual spend cap</description>
        <formula>Annual_Cap_vod__c - Year_to_Date_Spend_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Speaker Credentials. If the speaker is an Account, this data is copied from the Credentials_vod field on the account.</description>
        <label>Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RNP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <description>Speaker First Name. If the speaker is an Account, this data is copied from the FirstName field on the account.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Field for Japanese users input Katakana or Hiragana in order to search for speakers based on Furigana</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Speaker Last Name. If the speaker is an Account, this data is copied from the LastName field on the account.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_vod__c</fullName>
        <description>Speaker Middle Name.</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Year_Committed_vod__c</fullName>
        <description>Displays the total committed speaker costs that count toward next year’s cap</description>
        <label>Next Year Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Year_Reset_Date_vod__c</fullName>
        <description>Stores the speakers next year reset date</description>
        <label>Next Year Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Year_Status_vod__c</fullName>
        <description>Designates the speaker’s eligibility for events that count toward next year’s speaker cap</description>
        <label>Next Year Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated_vod</fullName>
                </value>
                <value>
                    <fullName>Eligible_vod</fullName>
                </value>
                <value>
                    <fullName>Expired_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname_vod__c</fullName>
        <description>Speaker Nickname.</description>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Formatted_Name_vod__c</fullName>
        <formula>Title_vod__c &amp; &quot; &quot; &amp; First_Name_vod__c &amp; &quot; &quot; &amp; Last_Name_vod__c &amp; &quot; &quot; &amp; Suffix_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Identifier_vod__c</fullName>
        <description>Populate with text that will help users to find the correct speaker record</description>
        <label>Speaker Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The status of a speaker.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated_vod</fullName>
                </value>
                <value>
                    <fullName>Eligible_vod</fullName>
                </value>
                <value>
                    <fullName>Expired_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix_vod__c</fullName>
        <description>Speaker Suffix.</description>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_vod__c</fullName>
        <description>Used to find Contracts with matching Tier information for generating Speaker Contracts.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Speaker Title. If the speaker is an Account, this data is copied from the PersonTitle field on the account.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Committed_Costs_vod__c</fullName>
        <description>Displays the total upcoming committed speaker costs that count toward the current year’s cap</description>
        <label>Upcoming Committed Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_To_Date_Reset_Day_vod__c</fullName>
        <label>Year to Date Reset Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Year_To_Date_Reset_Month_vod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_To_Date_Reset_Month_vod__c</fullName>
        <description>Month of YTD caps reset.</description>
        <label>Year to Date Reset Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_to_Date_Spend_vod__c</fullName>
        <description>Sum of spending against the speaker cap so far this year.</description>
        <label>Year to Date Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_to_Date_Utilization_vod__c</fullName>
        <description>Number of times a speaker has spoken this year to date.</description>
        <label>Year to Date Utilization</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>Speakers_Status</fullName>
        <columns>NAME</columns>
        <columns>Status_vod__c</columns>
        <columns>Speaker_Identifier_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Speakers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <recordTypes>
        <fullName>Speaker_vod</fullName>
        <active>true</active>
        <description>Speaker</description>
        <label>Speaker_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>